# USPicio_game_in_SFML-Cpp

./: .gitignore  CLAUDE.md  CMakeLists-vrsfml.txt  CMakeLists-wasm.txt  CMakeLists.txt
assets/config/: fases.json  frames.json
build-vrsfml/: CMakeCache.txt  Makefile  UspicioGame.html  UspicioGame.js  UspicioGame.wasm  cmake_install.cmake
build-vrsfml/assets/config/: fases.json
build-wasm/: CMakeCache.txt  Makefile  UspicioGame.js  UspicioGame.wasm  cmake_install.cmake
build-web/: CMakeCache.txt  Makefile  cmake_install.cmake  unit_tests.html  unit_tests.js
src/: main.cpp
src/core/: AmmoComponent.h  AudioConfig.h  DamageConfig.cpp  DamageConfig.h  DamageTypes.h  Direction.h  Drawable.h  HealthComponent.h  IAudioPlayer.h  IGameObject.h  IInputHandler.h  IRenderer.h  ITextureLoader.h  LivesComponent.h  PhysicsConstants.h
src/gameplay/: Boss.cpp  Boss.h  Capivara.cpp  Capivara.h  Chest.cpp  Chest.h  Game.cpp  Game.h  Level.cpp  Level.h  Mandrake.cpp  Mandrake.h  Peru.cpp  Peru.h  PhaseConfig.cpp  PhaseConfig.h  Player.cpp  Player.h  Professor.cpp  Professor.h  Projectile.cpp  Projectile.h  Rato.cpp  Rato.h
src/infrastructure/: AmmoDisplay.cpp  AmmoDisplay.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  FrameConfig.cpp  FrameConfig.h  HealthBar.cpp  HealthBar.h  LivesDisplay.cpp  LivesDisplay.h  SfmlConversions.h  SfmlInput.cpp  SfmlInput.h  SfmlRenderer.cpp  SfmlRenderer.h  SfmlSprite.cpp  SfmlSprite.h  SfmlText.cpp  SfmlText.h  SfmlTextureLoader.cpp  SfmlTextureLoader.h
tests/unit/: CMakeLists.txt  test_ammo_component.cpp  test_animation.cpp  test_asset_manager.cpp  test_chest.cpp  test_damage_config.cpp  test_engine.cpp  test_frame_config.cpp  test_health_component.cpp  test_lives_component.cpp  test_phase_config.cpp  test_ui_components.cpp
vrsfml/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  RENDERING_PIPELINE_REVIEW.md  clangformat_everthing.sh  run_all_examples.sh  run_all_test_variants_tmux.sh  run_all_tests.sh  run_emscripten_graphics_per_test.sh  run_example.sh  run_test.sh  stage_emcc_rel_examples.sh  vrsfml_migration.md
vrsfml/.github/workflows/: ci.yml
vrsfml/cmake/: CompilerWarnings.cmake  Config.cmake  Macros.cmake
vrsfml/examples/: CMakeLists.txt
vrsfml/examples/android/app/src/main/jni/: main.cpp
vrsfml/examples/arkanoid/: Arkanoid.cpp
vrsfml/examples/batching/: Batching.cpp
vrsfml/examples/batching_benchmark/: BatchingBenchmark.cpp
vrsfml/examples/block_puzzle/: BlockPuzzle.cpp  CMakeLists.txt
vrsfml/examples/bubble_idle/: BGMStorage.hpp  Bubble.hpp  BubbleIdleHelpers.hpp  BubbleIdleMain.cpp  BubbleIdleMain.hpp  BubbleIdleMainInline.hpp  CMakeLists.txt  Cat.hpp  ComboState.hpp  Doll.hpp  FrameViewState.hpp  GameConstants.hpp  GameRender.cpp  GameUpdate.cpp  HellPortal.hpp  HexSession.cpp  HexSession.hpp  ImGuiNotify.cpp  ImGuiNotify.hpp  MainApp.cpp  MainAtlasRects.hpp  MainBombStorage.hpp  MainGameStorage.hpp  MainGameplay.cpp  MainLoop.cpp  MainProgression.cpp  MainRendering.cpp  MainShaders.hpp  MainSystems.cpp  NotificationState.hpp  Particle.hpp  PlayerInput.cpp  PlayerInput.hpp  Playthrough.hpp  PurchasableScalingValue.hpp  Serialization.cpp  Serialization.hpp  Shrine.hpp  Sounds.cpp  Sounds.hpp  (+29 more)
vrsfml/examples/coroutine/: Coroutine.cpp
vrsfml/examples/coroutine_dialogue/: CMakeLists.txt  CoroutineDialogue.cpp
vrsfml/examples/coroutine_tutorial/: CMakeLists.txt  CoroutineTutorial.cpp
vrsfml/examples/event_handling/: EventHandling.cpp
vrsfml/examples/ftp/: Ftp.cpp
vrsfml/examples/http/: Http.cpp
vrsfml/examples/imgui_minimal/: ImGuiMinimal.cpp
vrsfml/examples/imgui_multiple_windows/: ImGuiMultipleWindows.cpp
vrsfml/examples/imgui_physics/: CMakeLists.txt  ImGuiPhysics.cpp
vrsfml/examples/include/ExampleProfiler/: Profiler.hpp  ProfilerImGui.hpp
vrsfml/examples/include/ExampleUtils/: Easing.hpp  HueColor.hpp  LoadedSound.hpp  MathUtils.hpp  Progress.hpp  RNGFast.hpp  Sampler.hpp  Scaling.hpp  SfexCoroutine.hpp  SfexYield.hpp  SoundManager.hpp  Xoroshiro128PlusPlusBitGenerator.hpp
vrsfml/examples/island/: Island.cpp
vrsfml/examples/joystick/: Joystick.cpp
vrsfml/examples/keyboard/: Keyboard.cpp
vrsfml/examples/particles/: Particles.cpp
vrsfml/examples/pixel_perfect/: CMakeLists.txt  PixelPerfect.cpp
vrsfml/examples/raw_input/: RawInput.cpp
vrsfml/examples/rockets/: CMakeLists.txt  Rockets.cpp
vrsfml/examples/shader/: Shader.cpp
vrsfml/examples/showcase/: Showcase.cpp  ShowcaseBunnyMark.cpp  ShowcaseBunnyMark.hpp  ShowcaseShapes.cpp  ShowcaseTextComparison.cpp  ShowcaseTextComparison.hpp
vrsfml/examples/sockets/: Sockets.cpp  TCP.cpp  UDP.cpp
vrsfml/examples/sound/: Sound.cpp
vrsfml/examples/sound_capture/: SoundCapture.cpp
vrsfml/examples/sound_effects/: SoundEffects.cpp
vrsfml/examples/sound_multi_device/: SoundMultiDevice.cpp
vrsfml/examples/src/ExampleProfiler/: ProfilerImGui.cpp
vrsfml/examples/src/ExampleUtils/: LoadedSound.cpp  Scaling.cpp
vrsfml/examples/stencil/: Stencil.cpp
vrsfml/examples/tennis/: Tennis.cpp
vrsfml/examples/tetris_survivors/: CMakeLists.txt  DefaultPerks.hpp  ShapeMatrix.hpp  TetrisSurvivors.cpp  Utils.hpp
vrsfml/examples/voip/: Client.cpp  Server.cpp  VoIP.cpp
vrsfml/examples/vulkan/: Vulkan.cpp
vrsfml/include/SFML/: GpuPreference.hpp
vrsfml/install/lib/: libsfml-audio-s.html  libsfml-glutils-s.html  libsfml-graphics-s.html  libsfml-imgui-s.html  libsfml-network-s.html  libsfml-system-s.html  libsfml-window-s.html
vrsfml/old/: cpp20coro.txt
vrsfml/src/SFML/: PCH.hpp
vrsfml/test/: CMakeLists.txt
vrsfml/test/Audio/: CMakeLists.txt  ChannelMap.test.cpp  InputSoundFile.test.cpp  Music.test.cpp  OutputSoundFile.test.cpp  Sound.test.cpp  SoundBuffer.test.cpp  SoundFileFactory.test.cpp  SoundFileReader.test.cpp  SoundSource.test.cpp  SoundStream.test.cpp
vrsfml/test/Base/: Algorithm.test.cpp  AnkerlUnorderedDenseFloatHash.test.cpp  Array.test.cpp  (+35 more)
vrsfml/webpage/: .gitignore  compile_benchmarks.md  index.html  nav.html  serve.sh  style.css  theme.js
web/: shell.html
(+465 files in other folders)
